# gxfs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  go.mod  go.sum
.claude/: settings.json
cmd/gxfs/: audit.go  audit_test.go  collection.go  main.go  main_test.go  usage_report.go
cmd/gxfs-server/: main.go  main_test.go
cmd/gxfs/command/: attach.go  cat.go  collection.go  config_command.go  docset.go  find.go  glob.go  grep.go  helpers.go  hook.go  init.go  init_test.go  locate.go  ls.go  mount.go  mutation.go  repo.go  search.go  stat.go  sync.go  tree.go
cmd/gxfs/instructions/: agents.md
cmd/rolio/: audit.go  audit_test.go  main.go  main_test.go  usage_report.go  usage_report_test.go
cmd/rolio-server/: main.go  main_test.go
cmd/rolio/command/: attach.go  cat.go  cat_test.go  config_command.go  docset.go  find.go  glob.go  grep.go  helpers.go  hook.go  init.go  init_test.go  locate.go  ls.go  mount.go  mutation.go  repo.go  search.go  stat.go  sync.go  tree.go
crates/gxfs/: Cargo.toml
crates/gxfs-core/: Cargo.toml
crates/gxfs-core/src/: error.rs  hash.rs  lib.rs  store.rs  types.rs
crates/gxfs-postgres/: Cargo.toml
crates/gxfs-postgres/src/: lib.rs
crates/gxfs/src/: main.rs
crates/gxfs/src/commands/: cat.rs  config.rs  docset.rs  edit.rs  grep.rs  hook.rs  locate.rs  mod.rs  mount.rs  repo.rs  rm.rs  serve.rs  sync.rs  write.rs
docs/agents/: gxfs.md
docs/dev/: README.md  cli-command-refactor.md
docs/gotchas/cli/: collection-help-hidden-by-config-free-root.md  docset-help-hidden-by-config-free-root.md  docset-mounts-are-read-only.md  gxfs-server-gc-run-usage.md  short-lived-cli-reporting.md
docs/gotchas/gitignore/: cmd-gxfs-binary-ignore-pattern.md
docs/roadmap/: 01-cross-repo-knowledge-filesystem.md
e2e/: backfill_test.go  doc_adapter_test.go  gc_test.go  postgres_cli_test.go
e2e/verify/: README.md  lib.sh  verify-collection.sh  verify-writable-mount.sh
internal/client/: client.go  client_test.go
internal/config/: config.go  config_test.go
internal/mount/: adapter.go  adapter_test.go  resolver.go  resolver_test.go
internal/server/: registry.go  server.go  server_test.go
internal/store/: hash.go  registry.go  registry_test.go  source_ref.go  store.go  store_test.go  usage.go
internal/syncmanifest/: manifest.go  manifest_test.go  scanner.go
internal/vfs/: tree.go  tree_test.go
test/e2e/: backfill_test.go  collection_test.go  doc_adapter_test.go  docset_test.go  gc_test.go  helpers_test.go  postgres_cli_test.go
(+66 files in other folders)
