[workspace]
resolver = "2"
members = [
    "crates/gxfs",
    "crates/gxfs-core",
    "crates/gxfs-postgres",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
gxfs-core = { version = "0.1.0", path = "crates/gxfs-core" }
gxfs-postgres = { version = "0.1.0", path = "crates/gxfs-postgres" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
