[package]
name = "gxfs-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and client for GXFS"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
regex.workspace = true
chrono.workspace = true
tracing.workspace = true
