[package]
name = "gxfs-postgres"
version.workspace = true
edition.workspace = true
description = "PostgreSQL storage adapter for GXFS"
license.workspace = true

[dependencies]
gxfs-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
